# FiducialDetector-TemplateMatching

./: CMakeLists.txt  README  detector_config.xml
include/: .FiducialDetector.h.swp  FiducialDetection.h  FiducialDetector.h  Globals.h  SpectralClusteringTemplateSelection.h  itkAffinityClustering.h
src/: CMakeLists.txt  FiducialDetection.cpp  ICPTemplateRegistration.cpp  MAPMARCandidateSelection.cpp  MAPMARFiducialCandidateSelection.cpp  SpectralClusteringTemplateSelection.cpp  itkAffinityClustering.cxx  itkAffinityClusteringTest.cxx  main.cpp
unit-tests/: main.cpp  testFiducialDetection.cpp
